--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 body {
-    background: #97a896 ;
+    background: #b8bfb8 ;
+    font: "Helvetica"
   }
+h1 {
+    text-align: center;
+}
+h2 {
+    text-align: center;
+}
